libs/@local/hashql/ast/tests/ui/lower/expander/import-resolver/generic-argument-use-path.jsonc
//@ run: fail
//@ description: Tests that generic arguments in 'use' statements are rejected with appropriate error
["use", "kernel::type<Integer>", { "#tuple": ["Union"] }, "_"]
//~^ ERROR generic arguments are not allowed in `use` paths
